# simple-html-template

./: Cargo.toml  README.md
src/: errors.rs  lib.rs
src/tests/: html.rs  mod.rs  template.rs
wasm/: Cargo.toml  LICENSE_MIT  README.md
wasm/src/: lib.rs
wasm/tests/: web.rs
