[package]
name = "simple-html-template"
description = "Html Template"
version = "0.1.5"
authors = ["David Komer <david.komer@gmail.com>"]
edition = "2018"
documentation = "https://docs.rs/simple-html-template"
homepage = "https://github.com/dakom/simple-html-template"
repository = "https://github.com/dakom/simple-html-template"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["string", "template", "templating", "engine"]
categories = ["template-engine"]

[dependencies]
cfg-if = "^0.1"
wasm-bindgen = {version = "0.2.62", optional = true}
web-sys = { version = "0.3.39", features = [
    'Document', 
    'DocumentFragment', 
    'HtmlTemplateElement',
    'Window',
    'Element',
], optional = true }

[features]
wasm = ["wasm-bindgen", "web-sys"]

[dev-dependencies]
htmlescape = "^0.3"
