[package]
name = "simple-html-template-wasm"
version = "0.1.2"
authors = ["David Komer <david.komer@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wee_alloc"]

[dependencies]
wasm-bindgen = "^0.2"
serde-wasm-bindgen = "^0.1"
htmlescape = "^0.3"
simple-html-template = { path = "../" }
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = 3 
